--- a/privacy/copilot-launchpad-pro-privacy.html
+++ b/privacy/copilot-launchpad-pro-privacy.html
@@ -69,7 +69,7 @@
 
                     <h2>Information We Collect</h2>
                     
-                    <h3>We do not collect or store any personal information. Everything stays on device in-app.</h3>
+                    <p>We do not collect or store any personal information. Everything stays on device in-app.</p>
                   
 
                     <h2>Data Sharing and Disclosure</h2>
